[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/map/RandomWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/random_events/SparkleEvent.gd" type="Script" id=2]
[ext_resource path="res://resources/icons/Continue.tres" type="Resource" id=4]
[ext_resource path="res://resources/icons/Hurt.tres" type="Resource" id=5]
[ext_resource path="res://resources/icons/Weaken.tres" type="Resource" id=6]
[ext_resource path="res://src/battle/RewardWindowPost.tres" type="StyleBox" id=7]

[node name="SparkleEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="IntroWindow" parent="." instance=ExtResource( 1 )]
margin_top = 16.0
margin_bottom = 79.0
custom_styles/panel = ExtResource( 7 )
title = "Strange Sparkle"
description = "You notice a strange sparkle, glistening from behind a shady tree."
option_names = [ "Approach the sparkle", "Ignore" ]

[node name="IgnoreWindow" parent="." instance=ExtResource( 1 )]
visible = false
margin_top = 21.0
margin_bottom = 74.0
custom_styles/panel = ExtResource( 7 )
title = "Ignore"
description = "You move on and the sparkle slowly fades into the darkness."
option_names = [ "Continue" ]
option_icons = [ [ ExtResource( 4 ) ] ]

[node name="FailureMaxHpWindow" parent="." instance=ExtResource( 1 )]
visible = false
margin_top = 21.0
margin_bottom = 74.0
custom_styles/panel = ExtResource( 7 )
title = "Failure"
description = "The spark was a raging ember that erupted into tiny sparks flying into your face!"
option_names = [ "Lose -1 Max HP" ]
option_icons = [ [ ExtResource( 6 ), ExtResource( 4 ) ] ]

[node name="FailureHpWindow" parent="." instance=ExtResource( 1 )]
visible = false
margin_top = 21.0
margin_bottom = 74.0
custom_styles/panel = ExtResource( 7 )
title = "Failure"
description = "The spark was a raging ember that erupted into tiny sparks flying into your face!"
option_names = [ "Lose -2 HP" ]
option_icons = [ [ ExtResource( 5 ), ExtResource( 4 ) ] ]

[node name="SuccessWindow" parent="." instance=ExtResource( 1 )]
visible = false
margin_top = 21.0
margin_bottom = 74.0
custom_styles/panel = ExtResource( 7 )
title = "Success"
description = "You carefully approach the shiny object and discover a relic beneath the trees!"
option_names = [ "Relic" ]
option_icons = [ [ ExtResource( 4 ) ] ]

[connection signal="option_0_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_0_pressed"]
[connection signal="option_1_pressed" from="IntroWindow" to="." method="_on_IntroWindow_option_1_pressed"]
[connection signal="option_0_pressed" from="FailureMaxHpWindow" to="." method="_on_FailureMaxHpWindow_option_0_pressed"]
[connection signal="option_0_pressed" from="FailureHpWindow" to="." method="_on_FailureHpWindow_option_0_pressed"]
[connection signal="option_0_pressed" from="SuccessWindow" to="." method="_on_SuccessWindow_option_0_pressed"]
